# jhol

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GET_STARTED.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  benchmark-results-all.json  benchmark-results-all.md  benchmark-results-step0.json  benchmark-results-step0.md  for-windows.md  install_jhol.bat
.github/workflows/: benchmark.yml  generator-generic-ossf-slsa3-publish.yml  release-build.yml
Documentation/: main.md
benchmarks/: baseline.json  benchmark-fair-true-cold-v1.json  benchmark-fair-true-cold-v2-post-ocp-with-npm.json  benchmark-latest-v10-parallel-manifest-conc32.json  benchmark-latest-v10-parallel-manifest-conc32.md  benchmark-latest-v11-hash-sri-singlepass-conc32.json  benchmark-latest-v11-hash-sri-singlepass-conc32.md  benchmark-latest-v12-streaming-download-conc32.json  benchmark-latest-v12-streaming-download-conc32.md  benchmark-latest-v13-recheck-conc32-r7.json  benchmark-latest-v13-recheck-conc32-r7.md  benchmark-latest-v14-ocp-profiler-conc32.json  benchmark-latest-v14-ocp-profiler-conc32.md  benchmark-latest-v2.json  benchmark-latest-v2.md  benchmark-latest-v3.json  benchmark-latest-v3.md  benchmark-latest-v4.json  benchmark-latest-v4.md  benchmark-latest-v5.json  benchmark-latest-v5.md  benchmark-latest-v6-conc32.json  benchmark-latest-v6-conc32.md  benchmark-latest-v7-reqwest-conc32.json  benchmark-latest-v7-reqwest-conc32.md  benchmark-latest-v7-ureq-conc32.json  benchmark-latest-v7-ureq-conc32.md  benchmark-latest-v8-indexfix-conc32.json  benchmark-latest-v8-indexfix-conc32.md  benchmark-latest-v9-manifestfastpath-conc32.json  benchmark-latest-v9-manifestfastpath-conc32.md  benchmark-latest.json  benchmark-latest.md  benchmark-next.json  benchmark-next.md  enterprise_guardrails.json  fallback_trend_guardrails.json  framework_guardrails.json  framework_matrix.json  live-bench-20260218-200004.json  (+4 more)
binary-packages/: deps.json  index.json
crates/jhol-core/: Cargo.toml
crates/jhol-core/data/: binary-packages-ai-web-200.json  binary-packages-hot-small.json
crates/jhol-core/src/: audit.rs  backend.rs  bin_links.rs  binary_cache.rs  binary_manifest.rs  bucket_vsids.rs  cdn.rs  config.rs  doctor.rs  enterprise.rs  error_handling.rs  exec.rs  fourier_jagr.rs  global_cache.rs  global_cache_2.rs  http2_download.rs  http_client.rs  install.rs  lib.rs  lockfile.rs  lockfile_write.rs  offline_cache.rs  optimized_download.rs  osv.rs  package_index.rs  prefetch.rs  registry.rs  registry_tests.rs  run.rs  sat_resolver.rs  sat_resolver_tests.rs  selective_extract.rs  utils.rs  ux.rs  workspaces.rs
crates/jhol-core/src/cas/: cas.rs  hardlink.rs  integrity.rs  mod.rs
crates/jhol-core/src/pubgrub/: incompatibility.rs  minimal.rs  mod.rs  partial_solution.rs  solver.rs  term.rs  tests.rs  version_set.rs  vsids.rs
crates/jhol-core/src/task_queue/: adaptive.rs  mod.rs  parallel.rs  queue.rs  worker.rs
docs/: BOTTLENECK_ANALYSIS.md  JAGR1.md
scripts/: benchmark.py  benchmark.sh  check_benchmark_regression.py  check_fallback_trend.py  check_guardrails.py  collect_baseline.py  compat.sh  enterprise_npmrc_report.py  framework_compat_report.py  guardrails.sh  live_bench.py  live_bench.sh  resolver_fixture_report.py
src/: doctor.rs  install.rs  lockfile.rs  main.rs  registry.rs  utils.rs
tests/: cli.rs  compat_matrix.rs
tests/resolver-snapshots/: expo-app.json  express-app.json  nest-app.json  next-app.json  nuxt-app.json  optional-deps-app.json  overrides-app.json  peer-conflict.json  peer-deps-app.json  react-app.json  turbo-app.json  typescript-app.json  workspace-app.json
