[package]
name = "jhol"
version = "1.0.0"
authors = ["Bhuvan Prakash <bhuvanstark6@gmail.com>"]
edition = "2021"
description = "Fast, offline-friendly package manager with cache, doctor, and npm fallback"
license-file = "LICENSE"
repository = "https://github.com/bhuvanprakash/jhol"
keywords = ["package-manager", "npm", "cache", "offline"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["cargo"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36", features = ["full"] }
chrono = "0.4.34"

[[bin]]
name = "jhol"
path = "src/main.rs"
