[workspace]
members = [".", "crates/jhol-core"]
resolver = "2"

[package]
name = "jhol"
version = "1.0.0"
authors = ["Bhuvan Prakash <bhuvanstark6@gmail.com>"]
edition = "2021"
description = "Fast, offline-friendly package manager with cache, doctor, and npm fallback"
license-file = "LICENSE"
repository = "https://github.com/bhuvanprakash/jhol"
readme = "README.md"
keywords = ["package-manager", "npm", "cache", "offline"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
jhol-core = { path = "crates/jhol-core" }
clap = { version = "4.5", features = ["cargo"] }
colored = "2.1"
indicatif = "0.17"

[[bin]]
name = "jhol"
path = "src/main.rs"
