[package]
name = "jhol-core"
version = "1.0.0"
edition = "2021"
description = "Core logic for Jhol: cache, install, doctor, registry, lockfile"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
ureq = "2.10"
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"
semver = "1.0"
base64 = "0.21"
