[package]
name = "jhol-core"
version = "1.0.1"
edition = "2021"
description = "Core logic for Jhol: cache, install, doctor, registry, lockfile"
license-file = "../../LICENSE"
repository = "https://github.com/bhuvanprakash/jhol"

[features]
default = []
http-reqwest = ["dep:reqwest", "dep:tokio"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
ureq = "2.10"
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"
semver = "1.0"
base64 = "0.21"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
